--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CPSC 349 - Fall 2022 - Exercise 3",
   "scripts": {
     "start": "browser-sync start --server --startPath /posts.html --files \"*.html,*.css,*.js\"",
-    "test": "standard && vnu --skip-non-html --Werror *.html"
+    "test": "standard && java -jar node_modules/vnu-jar/build/dist/vnu.jar --skip-non-html --Werror *.html"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "browser-sync": "^3.0.4",
-    "standard": "^17.0.0"
+    "standard": "^17.0.0",
+    "vnu-jar": "^24.10.17"
   }
 }
